<resources>
    <string name="app_name">EatIt</string>
    <string name="slogan">Food is not rational. Food is culture, habit, craving and identity.</string>
    <string name="text_daftar">Daftar</string>
    <string name="text_password_hint">Password</string>
    <string name="text_name_hint">Nama</string>
    <string name="text_nomor_telepon_hint">Nomor Telepon</string>
    <string name="text_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
