<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu">

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.eatit.ui.Menu.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.eatit.ui.Cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.eatit.ui.Orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_log_out"
        android:name="com.example.eatit.ui.Logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />

</navigation>